codepkg/objects/CFAA_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>CFAA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFAA</label>
        <referenceTo>CFAA__c</referenceTo>
        <relationshipLabel>CFAA Line Items</relationshipLabel>
        <relationshipName>CFAA_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emergency_Apparatus_Type__c</fullName>
        <label>Emergency Apparatus Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type I</fullName>
                </value>
                <value>
                    <fullName>Type II</fullName>
                </value>
                <value>
                    <fullName>Type III</fullName>
                </value>
                <value>
                    <fullName>Type IV - VII</fullName>
                </value>
                <value>
                    <fullName>Water Tender Tactical I</fullName>
                </value>
                <value>
                    <fullName>Water Tender Tactical II</fullName>
                </value>
                <value>
                    <fullName>Type IV – VII</fullName>
                    <isActive>false</isActive>
                    <label>Type IV – VII</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Overhead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Overhead ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_Time_Rate__c</fullName>
        <label>Over Time Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personnel_Role__c</fullName>
        <label>Personnel Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chief</fullName>
                </value>
                <value>
                    <fullName>Deputy Chief</fullName>
                </value>
                <value>
                    <fullName>Division Chief</fullName>
                </value>
                <value>
                    <fullName>Assistant Chief</fullName>
                </value>
                <value>
                    <fullName>Battalion Chief</fullName>
                </value>
                <value>
                    <fullName>Co. Officer/Capt./Lt.</fullName>
                </value>
                <value>
                    <fullName>App. Officer/Eng</fullName>
                </value>
                <value>
                    <fullName>Firefighter/FF-PMedic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Straight_Time_Rate__c</fullName>
        <label>Straight Time Rate</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Equipment_Type__c</fullName>
        <label>Support Equipment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Pick-Up (1/2 Ton)</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Other (3/4 Ton &amp; Above)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personnel Base Rates</fullName>
                </value>
                <value>
                    <fullName>Support Equipment Rates</fullName>
                </value>
                <value>
                    <fullName>Emergency Apparatus Rates</fullName>
                </value>
                <value>
                    <fullName>Privately Owned Vehicle (POV) Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Mile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CFAA Line Item</label>
    <nameField>
        <label>CFAA Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFAA Line Items</pluralLabel>
    <recordTypes>
        <fullName>Emergency_Apparatus_Rate</fullName>
        <active>true</active>
        <description>Use for entering Emergency Apparatus Rate</description>
        <label>Emergency Apparatus Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>POV_Rate</fullName>
        <active>true</active>
        <description>Use for entering Privately Owned Vehicles Rate</description>
        <label>POV Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Personnel_Base_Rate</fullName>
        <active>true</active>
        <description>Use for entering personnel base rate</description>
        <label>Personnel Base Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Equipment_Rate</fullName>
        <active>true</active>
        <description>Use for entering Government Owned Support Equipment Rates</description>
        <label>Support Equipment Rate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>